--- a/source/_posts/2017-03-21-ddoxを使う.md
+++ b/source/_posts/2017-03-21-ddoxを使う.md
@@ -131,6 +131,6 @@ void parseAttributes(ref string[] dst, const(string)[] keywords)
 # あとがき・怨嗟の声
 
 はっきり言って、Rejected Software製のソフトウェア・ライブラリの質は低いと思います。
-dubやvibe.dなどでD言語の存在感を高めた功績は大きいですが、ソフトウェアの品質が低いことでD言語に対して負の影響がないか心配です。(日本の某企業でvibe.dを採用したプロジェクトが炎上した話は某SNS住民の記憶には新しいと思う)
+dubやvibe.dなどでD言語の存在感を高めた功績は大きいですが、ソフトウェアの品質が低いことでD言語に対して負の影響がないか心配です。(個人的には、dubは遅いパッケージレジストリに毎回リクエストするなど問題が多く、vibe.dもカジュアルにnullを返すなどの設計上の問題がある)
 私はD言語が流行らない理由としてライブラリの不足も一因であると考えていますが、だからといって品質の低いライブラリを無闇に増やすのも問題だと思います。
 D言語は本当に素晴しい言語だと思います。この言語が多くの人々に末長く親しまれることを願っています。
